--- a/SEP21/Views/Shared/_Layout.cshtml
+++ b/SEP21/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
 <body>
 
     <!-- ======= Header ======= -->
-    <header id="header" style="background-color:blue" class="fixed-top">
+    <header id="header" style="background-color:#37517e" class="fixed-top">
         <div class="container d-flex align-items-center">
 
             <h1 class="logo me-auto"><a href="@Url.Action("Index","Home")">Khoa CNTT</a></h1>
