--- a/SEP21/Areas/QuanLy/Views/BaiViets/Edit.cshtml
+++ b/SEP21/Areas/QuanLy/Views/BaiViets/Edit.cshtml
@@ -22,8 +22,20 @@
             CKEDITOR.replace('NoiDung');
         });
     </script>
+    <script>
+        function readPicture(input) {
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+
+                reader.onload = function (e) {
+                    $('img#Picture').attr('src', e.target.result);
+                };
+                reader.readAsDataURL(input.files[0]);
+            }
+        }
+    </script>
 }
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "BaiViets", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
@@ -41,7 +53,13 @@
                 @Html.ValidationMessageFor(model => model.TieuDe, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        <div class="form-group">
+            <label class="control-label col-md-2" for="IMG">Ảnh Tiêu Đề</label>
+            <div class="col-md-10">
+                <input class="form-control" type="file" name="Picture" id="IMG" onchange="readPicture(this)" accept="image/gif,image/jpeg,image/png" />
+            </div>
+            <img id="Picture" src="@Url.Action("Picture", new { Model.ID })" />
+        </div>
         <div class="form-group">
             @Html.Label("Nội dung", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
