--- a/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
+++ b/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
@@ -29,6 +29,12 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12">
+                    @if (TempData["AlertMessage"] != null)
+                    {
+                        <div class="alert @TempData["AlertType"] hide">
+                            @TempData["AlertMessage"]
+                        </div>
+                    }
                     @RenderBody()
                 </div>
                 <!-- /.col-lg-12 -->
