--- a/SEP21/Areas/QuanLy/Views/BaiViets/Delete.cshtml
+++ b/SEP21/Areas/QuanLy/Views/BaiViets/Delete.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Xóa</h2>
 
-<h3>Bạn Chắc Chắn Muốn Xóa Không ?</h3>
+<h3>Bạn chắn chắn muốn xóa không ?</h3>
 <div>
     <h4>Bài Viết</h4>
     <hr />
