--- a/SEP21/Areas/QuanLy/Views/TuyenDungs/Index.cshtml
+++ b/SEP21/Areas/QuanLy/Views/TuyenDungs/Index.cshtml
@@ -43,7 +43,7 @@
             @Html.DisplayFor(modelItem => item.TieuDe)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.LoaiTuyenDung1.LoaiTuyenDung1)
+            @Html.DisplayFor(modelItem => item.LoaiTuyenDung)
         </td>
         <td>
             @Html.ActionLink("Chỉnh Sửa", "Edit", new { id=item.ID }) |
