--- a/SEP21/Views/Home/Index.cshtml
+++ b/SEP21/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
         <section id="about" class="about">
             <div class="container" data-aos="fade-up">
                 <div class="section-title">
-                    <h2>Tin tức - hoạt động</h2>
+                    <h2 style="font-family: Arial">Tin tức - hoạt động</h2>
                 </div>
                 <div class="row content">
                     @foreach (var item in Model)
