--- a/SEP21/Areas/QuanLy/Views/BaiViets/Index2.cshtml
+++ b/SEP21/Areas/QuanLy/Views/BaiViets/Index2.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="col-lg-12">
-    <h1 class="page-header">Tables</h1>
+    <h1 class="page-header">Quản Lí Bài Viết</h1>
 </div>
 <!-- /.col-lg-12 -->
 <!-- /.row -->
@@ -18,7 +18,6 @@
                 <button type="button" class="btn btn-primary">Tạo bài viết</button>
             </a>
             <div class="panel-heading">
-                Quản lí bài viết
             </div>
 
             <!-- /.panel-heading -->
