--- a/SEP21/Areas/QuanLy/Views/Daotaos/Create.cshtml
+++ b/SEP21/Areas/QuanLy/Views/Daotaos/Create.cshtml
@@ -23,7 +23,7 @@
     @Scripts.Render("~/bundles/jqueryval")
 }
 
-<h2>Create</h2>
+<h2>Tạo Mới</h2>
 
 
 @using (Html.BeginForm())
@@ -31,18 +31,18 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>DaoTao</h4>
+        <h4>Đào Tạo</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.TieuDe, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Tiêu Đề", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.TieuDe, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.TieuDe, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.NoiDung, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Nội Dung", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.TextAreaFor(model => model.NoiDung, new { htmlAttributes = new { @class = "form-control", } })
                 @Html.ValidationMessageFor(model => model.NoiDung, "", new { @class = "text-danger" })
@@ -51,12 +51,12 @@
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Tạo" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Trở Lại", "Index")
 </div>
