--- a/SEP21/Areas/QuanLy/Views/Daotaos/Edit.cshtml
+++ b/SEP21/Areas/QuanLy/Views/Daotaos/Edit.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Edit</h2>
+<h2>Chỉnh Sửa</h2>
 @section scripts{
     <script src="~/Plugin/ckfinder/ckfinder.js"></script>
     <script src="~/Plugin/ckeditor/ckeditor.js"></script>
@@ -30,20 +30,20 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>DaoTao</h4>
+        <h4>Đào Tạo</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ID)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.TieuDe, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Tiêu Đề", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.TieuDe, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.TieuDe, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.NoiDung, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Nội Dung", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.TextAreaFor(model => model.NoiDung, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.NoiDung, "", new { @class = "text-danger" })
@@ -55,12 +55,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Lưu" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Trở Lại", "Index")
 </div>
