--- a/SEP21/Areas/QuanLy/Views/Logins/Index.cshtml
+++ b/SEP21/Areas/QuanLy/Views/Logins/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Quản Lý Sinh Viên</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -13,10 +13,10 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.username)
+            Tài Khoản
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.password)
+            Mật Khẩu
         </th>
         <th></th>
     </tr>
@@ -26,13 +26,13 @@
         <td>
             @Html.DisplayFor(modelItem => item.username)
         </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.password)
+        <td >            
+                    
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
+            @Html.ActionLink("Chỉnh Sửa", "Edit", new { id=item.ID }) |
+            @Html.ActionLink("Chi Tiết", "Details", new { id=item.ID }) |
+            @Html.ActionLink("Xóa", "Delete", new { id=item.ID })
         </td>
     </tr>
 }
