--- a/SEP21/Areas/QuanLy/Views/ThanhTiches/Delete.cshtml
+++ b/SEP21/Areas/QuanLy/Views/ThanhTiches/Delete.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Xóa</h2>
 
-<h3>Bạn Chắc Chắn Muốn Xóa Không ?</h3>
+<h3>Bạn chắc chắn muốn xóa không ?</h3>
 <div>
     <h4>Thành Tích</h4>
     <hr />
