--- a/SEP21/Views/GioiThieus/Index.cshtml
+++ b/SEP21/Views/GioiThieus/Index.cshtml
@@ -8,24 +8,24 @@
         <div class="container aos-init aos-animate" data-aos="fade-up">
 
             <div class="section-title">
-                <h2 style="font-family:'Times New Roman'">Sứ Mạng</h2>
-                <h3 style="font-family:'Times New Roman'">@item.SuMang</h3>
+                <h2 style="font-family:Arial">Sứ Mạng</h2>
+                <h3 style="font-family:Arial">@item.SuMang</h3>
             </div>
         </div>
     </section>
     <section id="portfolio" class="portfolio">
         <div class="container aos-init aos-animate" data-aos="fade-up">
             <div class="section-title">
-                <h2 style="font-family:'Times New Roman'">Tầm Nhìn</h2>
-                <h3 style="font-family:'Times New Roman'">@item.TamNhin</h3>
+                <h2 style="font-family: Arial">Tầm Nhìn</h2>
+                <h3 style="font-family: Arial">@item.TamNhin</h3>
             </div>
         </div>
     </section>
     <section id="team" class="team section-bg">
         <div class="container aos-init aos-animate" data-aos="fade-up">
             <div class="section-title">
-                <h2 style="font-family:'Times New Roman'">Triết Lý Giáo Dục</h2>
-                <h3 style="font-family:'Times New Roman'">@item.TrietLyGiaoDuc</h3>
+                <h2 style="font-family: Arial">Triết Lý Giáo Dục</h2>
+                <h3 style="font-family: Arial">@item.TrietLyGiaoDuc</h3>
             </div>
         </div>
     </section>
