--- a/SEP21/Views/Home/Index.cshtml
+++ b/SEP21/Views/Home/Index.cshtml
@@ -25,8 +25,22 @@
         <section id="about" class="about">
             <div class="container" data-aos="fade-up">
                 <div class="section-title">
+                    <div class="col-md-3 col-md-offset-3">
+                        <form action="@Url.Action("Search","BaiViet")">
+                            <div class="form-group input-group">
+                                <input type="text" class="form-control" name="text">
+                                <span class="input-group-btn">
+                                    <button class="btn btn-default" type="button">
+                                        <i class="fa fa-search"></i>
+                                    </button>
+                                </span>
+                            </div>
+                        </form>
+                        <h2>@(ViewBag.Keyword != null ? "Search Results" : "All Products")</h2>
+                    </div>
                     <h2 style="font-family: Arial">Tin tức - hoạt động</h2>
                 </div>
+
                 <div class="row content">
                     @foreach (var item in Model)
                     {
