--- a/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
+++ b/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
@@ -115,7 +115,7 @@
                             <a href="@Url.Action("Index2","BaiViets")"><i class="fa fa-dashboard fa-fw"></i>Tin tức - Hoạt động</a>
                         </li>
                         <li>
-                            <a href="@Url.Action("Index","DangKyHoatDongs")"><i class="fa fa-dashboard fa-fw"></i>Danh sách đăng kí hoạt động</a>
+                            <a href="@Url.Action("Index2","DangKyHoatDongs")"><i class="fa fa-dashboard fa-fw"></i>Danh sách đăng kí hoạt động</a>
                         </li>
                         
                         <li>
