--- a/SEP21/Areas/QuanLy/Views/SinhViens/Index.cshtml
+++ b/SEP21/Areas/QuanLy/Views/SinhViens/Index.cshtml
@@ -4,11 +4,29 @@
     ViewBag.Title = "Index";
     Layout = "~/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml";
 }
-
 <h1 class="page-header">Thông tin sinh viên</h1>
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+@using (Html.BeginForm("Upload", "Sinhviens", FormMethod.Post, new { enctype = "multipart/form-data" }))
+{
+    <table>
+        <tr>
+            <td>File: </td>
+            <td>
+                <input type="file"
+                       name="UploadedFile" />
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                <input type="submit"
+                       name="Submit"
+                       value="Submit" />
+            </td>
+        </tr>
+    </table>
+}
 <!-- /.row -->
 <div class="row">
     <div class="col-lg-12">
