--- a/SEP21/Views/Home/Index.cshtml
+++ b/SEP21/Views/Home/Index.cshtml
@@ -46,7 +46,7 @@
                         <div class="col-lg-6">
                             <div class="card">
                                 <a href="@Url.Action("Details","BaiViet", new { item.ID })">
-                                    <img class="img-fluid" style="max-width:100%" src="@Url.Action("Picture", new { item.ID })" alt="hinhanh">
+                                    <img class="img-fluid" style="max-width:75%" width="600" height="400" src="@Url.Action("Picture", new { item.ID })" alt="hinhanh">
                                     <div class="card-body">
                                         <h3 class="card-title">*@item.LoaiBaiViet1.TenLoaiBaiViet* @item.TieuDe</h3>
                                     </div>
