--- a/SEP21/Views/Shared/_Layout.cshtml
+++ b/SEP21/Views/Shared/_Layout.cshtml
@@ -47,17 +47,12 @@
                     <li class="dropdown">
                         <a href="#"><span>Giới thiệu</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
-                            <li><a href="@Url.Action("Index","GioiThieus")">Sứ mạng - Tầm Nhìn - Triết Lý Giáo Dục</a></li>
+                            <li><a href="@Url.Action("Index","GioiThieus")">Giới thiệu</a></li>
                             <li><a href="@Url.Action("Index2","GioiThieus")">Cơ cấu tổ chức</a></li>
                         </ul>
                     </li>
                     <li><a class="nav-link scrollto" href="#about">Đào tạo</a></li>
-                    <li class="dropdown">
-                        <a href="#"><span>Sinh viên</span> <i class="bi bi-chevron-down"></i></a>
-                        <ul>
-                            <li><a href="#">Đoàn - hội Khoa</a></li>
-                        </ul>
-                    </li>
+
                     <li class="dropdown">
                         <a href="#"><span>Tuyển dụng</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
@@ -66,6 +61,7 @@
                         </ul>
                     </li>
                     <li><a class="nav-link scrollto" href="https://tuyensinh.vanlanguni.edu.vn/cong-nghe-thong-tin/" target="_blank">Tuyển sinh</a></li>
+
                     <li class="dropdown">
                         <a href="#"><span>Liên kết</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
