--- a/SEP21/Areas/QuanLy/Views/BaiViets/Delete.cshtml
+++ b/SEP21/Areas/QuanLy/Views/BaiViets/Delete.cshtml
@@ -41,7 +41,7 @@
             Mã Nhân Viên
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.NhanVienKhoa.MaNhanVien)
+            @Html.DisplayFor(model => model.NhanVienKhoa.HoTen)
         </dd>
         <dt>
             Hình Ảnh
@@ -56,7 +56,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Xóa" class="btn btn-default" /> |
-            @Html.ActionLink("Trở Lại", "Index")
+            @Html.ActionLink("Trở Lại", "Index2")
         </div>
     }
 </div>
