--- a/SEP21/Areas/QuanLy/Views/GioiThieux/Index.cshtml
+++ b/SEP21/Areas/QuanLy/Views/GioiThieux/Index.cshtml
@@ -11,10 +11,6 @@
     <p>
         @Html.ActionLink("Chỉnh Sửa", "Edit", new { id = item.ID })
     </p>
-    <h3>Sứ mạng</h3>
-    <h4>@item.SuMang</h4>
-    <h3>Tầm nhìn</h3>
-    <h4>@item.TamNhin</h4>
-    <h3>Triết lý giáo dục</h3>
-    <h4>@item.TrietLyGiaoDuc</h4>
+    <h3>Nội dung</h3>
+    <h4>@item.NoiDung</h4>
 }
