--- a/SEP21/Views/Shared/_Layout.cshtml
+++ b/SEP21/Views/Shared/_Layout.cshtml
@@ -48,16 +48,16 @@
                         <a href="#"><span>Giới thiệu</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
                             <li><a href="@Url.Action("Index","GioiThieus")">Giới thiệu</a></li>
-                            <li><a href="@Url.Action("Index2","GioiThieus")">Cơ cấu tổ chức</a></li>
+                            <li><a href="@Url.Action("Index","CanBoKhoa")">Cơ cấu tổ chức</a></li>
                         </ul>
                     </li>
-                    <li><a class="nav-link scrollto" href="#about">Đào tạo</a></li>
+                    <li><a class="nav-link scrollto" href="@Url.Action("Index","DaoTao")">Đào tạo</a></li>
 
                     <li class="dropdown">
                         <a href="#"><span>Tuyển dụng</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
                             <li><a href="https://ejob.vanlanguni.edu.vn/" target="_blank">Sinh viên đang học</a></li>
-                            <li><a href="#">Tuyển dụng</a></li>
+                            <li><a href="@Url.Action("Index","TuyenDung")">Tuyển dụng</a></li>
                         </ul>
                     </li>
                     <li><a class="nav-link scrollto" href="https://tuyensinh.vanlanguni.edu.vn/cong-nghe-thong-tin/" target="_blank">Tuyển sinh</a></li>
